--- a/RelinkModOrganizer.csproj
+++ b/RelinkModOrganizer.csproj
@@ -40,7 +40,7 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.10" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.10.9" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="8.0.0" />
+    <!--<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="8.0.0" />-->
   </ItemGroup>
 
   <ItemGroup Label="DataTools">
