--- a/RelinkModOrganizer.csproj
+++ b/RelinkModOrganizer.csproj
@@ -39,6 +39,7 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.10" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.10.9" />
+    <PackageReference Include="MessageBox.Avalonia" Version="3.1.5.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <!--<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="8.0.0" />-->
   </ItemGroup>
